--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </form>
     
     
-    <a href=#>
+    <a href="student_no_login.html">
       <div id="studentbox">
         <div id="studentbox-text">
 <!--          <p>Er du</p>-->
