--- a/student_no_login.html
+++ b/student_no_login.html
@@ -22,7 +22,7 @@
   </header>
 
   <div id="wrapper_not_frontpage">
-  
+
     <a href="#wrapper_not_frontpage">
       <h4 id="to-top" class="fa fa-chevron-up"></h5>
     </a>
@@ -70,10 +70,9 @@
       </a>
       <a href="#stud-projects-content">
         <div id="see-stud-projects" class="intro-3btn">
-          <i class="icon-3btn fa fa-file-text"></i>
+          <i class="icon-3btn fa fa-building"></i>
           <div id="underline5" class="underline"></div>
-          <p>Se studerendes<br>
-            projekter...</p>
+          <p>Se tilmeldte<br>virksomheder...</p>
           <div class="whitebox-hor"></div> <!--To only show corners -->
           <div class="whitebox-ver"></div> <!--To only show corners -->
         </div>
@@ -92,14 +91,17 @@
       <div id="three-ways-content">
    
         <div id="three-ways-content-1">
+          <h3>Fag</h3>
           <p>Man kan fremad se, at de har været udset til at læse, at der skal dannes par af ligheder. Dermed kan der afsluttes uden løse ender...</p>
           <div id="bg-twc-1" class="bg-twc"></div>
         </div>
         <div id="three-ways-content-2">
           <div id="bg-twc-2" class="bg-twc"></div>
+          <h3>Fag + Problem</h3>
           <p>... og de kan optimeres fra oven af at formidles stort uden brug fra presse. I en kant af landet går der blandt om...</p>
         </div>
         <div id="three-ways-content-3">
+          <h3>Fag + Problem + Idé</h3>
           <p>...at de vil sætte den over forbehold for tiden. Vi flotter med et hold, der vil rundt og se sig om i byen. Det gør heller ikke mere.  </p>
           <div id="bg-twc-3" class="bg-twc"></div>
         </div>
