--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div id="companybox-text">
 <!--          <p>Er du</p>-->
           <h2>Virksomhed
-            <div id="underline1"></div>
+            <div id="underline1" class="underline"></div>
           </h2>
           
           <i id="icon-company" class="fa fa-building"></i>
@@ -62,7 +62,7 @@
         <div id="studentbox-text">
 <!--          <p>Er du</p>-->
           <h2>Studerende
-              <div id="underline2"></div>
+              <div id="underline2" class="underline"></div>
           </h2>
           <i id="icon-student" class="fa fa-graduation-cap"></i>
         </div>
