Update af alt inkl. header

--- a/projects.html
+++ b/projects.html
@@ -17,8 +17,26 @@
 
 <body>
   
-  <header>
-    
+  <header id="header">
+
+    <nav id="main_nav">
+
+      <ul id="main_nav-left">
+        <li><a href="#">Logo</a></li>
+      </ul>
+
+      <ul id="main_nav-middle">
+        <li><a href="#">Opret Projekt</a></li>
+        <li><a href="#">Se Tilmeldte</a></li>
+        <li><a href="#">Se Projektbasen</a></li>
+      </ul>
+
+      <ul id="main_nav-right">
+        <li><a href="#">Navn+Dropd.</a></li>
+      </ul>
+
+    </nav>
+
   </header>
 
   <div id="wrap_projects" class="wrapper_not_frontpage">
