--- a/student_no_login.html
+++ b/student_no_login.html
@@ -17,9 +17,27 @@
 
 <body>
   
-  <header>
-    
-  </header>
+<header id="header">
+
+  <nav id="main_nav">
+
+    <ul id="main_nav-left">
+      <li><a href="#">Logo</a></li>
+    </ul>
+
+    <ul id="main_nav-middle">
+      <li><a href="#">Opret Projekt</a></li>
+      <li><a href="#">Se Tilmeldte</a></li>
+      <li><a href="#">Se Projektbasen</a></li>
+    </ul>
+
+    <ul id="main_nav-right">
+      <li><a href="#">Navn+Dropd.</a></li>
+    </ul>
+
+  </nav>
+
+</header>
 
   <div id="wrap_snl" class="wrapper_not_frontpage">
 
