--- a/projects_students-with_header.html
+++ b/projects_students-with_header.html
@@ -17,6 +17,27 @@
 
 <body>
 
+  <header id="header">
+
+    <nav id="main_nav">
+
+      <ul id="main_nav-left">
+        <li><a href="#">Logo</a></li>
+      </ul>
+
+      <ul id="main_nav-middle">
+        <li><a href="#">Opret Projekt</a></li>
+        <li><a href="#">Se Tilmeldte</a></li>
+        <li><a href="projects_students-with_header.html">Se Projektbasen</a></li>
+      </ul>
+
+      <ul id="main_nav-right">
+        <li><a href="my_page.html">Navn+Dropd.</a></li>
+      </ul>
+
+    </nav>
+
+  </header>
   
   <div id="wrap_projects" class="wrapper_not_frontpage">
   
