Update til alt, nyere nav, flere modaler

--- a/index.html
+++ b/index.html
@@ -26,12 +26,10 @@
       <div id="companybox">
         <div id="companybox-text">
 <!--          <p>Er du</p>-->
-          <h2>Virksomhed
-            <div id="underline1" class="underline"></div>
-          </h2>
-          
+          <h2>Virksomhed</h2>          
           <i id="icon-company" class="fa fa-building"></i>
         </div>
+        <div id="underline1" class="underline_index underline"></div>
       </div>
     </a>
     
@@ -62,11 +60,10 @@
       <div id="studentbox">
         <div id="studentbox-text">
 <!--          <p>Er du</p>-->
-          <h2>Studerende
-              <div id="underline2" class="underline"></div>
-          </h2>
+          <h2>Studerende</h2>
           <i id="icon-student" class="fa fa-graduation-cap"></i>
         </div>
+        <div id="underline2" class="underline_index underline"></div>
       </div>
     </a>
   
