Updated create project

--- a/create_project-company.html
+++ b/create_project-company.html
@@ -132,9 +132,9 @@
         <div id="step2-content" class="step-content-com">
           <h4>Beskrivelse af projektet</h4>
           <form>
-            <p>Beskriv projektet i kassen herunder. (max 500 tegn)</p>
+          <p>Beskriv projektet i kassen herunder. (max 1000 tegn)</p>
             <br>
-            <textarea autofocus maxlength="500" name="Beskrivelse" placeholder="Beskriv dit projekt her" rows="10" cols="50"></textarea>
+            <textarea autofocus maxlength="100" name="Beskrivelse" placeholder="Beskriv dit projekt her" rows="10" cols="50"></textarea>
           </form>
           <br>
           <button type="submit" >Næste trin</button>
@@ -152,17 +152,22 @@
        <!--   HVIS VI FØLER FOR DET: http://loudev.com/ ELLER: http://www.erichynds.com/examples/jquery-ui-multiselect-widget/demos/#basic  -->
             <select multiple required>
               <option value="None" selected>Ingen</option>
-              <option value="Tag1">HR</option>
+              <option value="Tag1">Økonomi</option>
               <option value="Tag2">Grafisk design</option>
-              <option value="Tag3">Analytiker</option>
+              <option value="Tag3">Frontend</option>
               <option value="Tag4">Erhvervsøkonomi</option>
               <option value="Tag5">Webdesign</option>
               <option value="Tag6">Kommunikation</option>
-              <option value="Tag7">Marketing</option>
-              <option value="Tag8">SEO</option>
-              <option value="Tag9">Journalistik</option>
+              <option value="Tag7">Arkitektur</option>
+              <option value="Tag8">Regnskabsanalyse</option>
+              <option value="Tag9">Tekstforfatning</option>
               <option value="Tag10">Programmering</option>
               <option value="Tag10">Finansiering</option>
+              <option value="Tag10">Erhvervsøkonomi</option>
+              <option value="Tag10">Photoshop</option>
+              <option value="Tag10">Oversættelse</option>
+              <option value="Tag10">Naturvidenskab</option>
+              <option value="Tag10">medicin</option>
             </select>
             <br>
             <button type="submit" >Næste trin</button>
