Alt + opret projekt

--- a/my_page.html
+++ b/my_page.html
@@ -272,6 +272,7 @@
   <script src="js/jquery-ui.js"></script>
   <script src="js/d3.v2.js"></script> <!-- script bag wheel script -->
   <script src="js/wheel.js"></script>
+  <script src="js/wheel-overview.js"></script>
   <script src="js/modal.js"></script>
   
   <script type="text/javascript">
